--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,89 @@
 /*
 Colors to use:
-dark blue: #06365f
-light blue: #1c5380
+dark blue: 
+light blue: 
 */
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  }
+
+.background{
+  background-color: #1c5380;
+  position: absolute;  
+  height: 40%;
+  width: 100%;
+}
+.phone{
+  position: absolute;
+  margin-top: 150px;
+  margin-left: 200px;
+} 
+.container{
+  position: absolute;
+  margin-left: 40%;
+  width: 50%;
+  margin-top: 150px;
+}
+.login{
+  border: 1px solid #06365f;
+  background-color: unset;
+  height: 40px;
+  width: 90px;
+  color: white;
+  margin-left: 180px;
+  margin-top: 20px;
+  float: left;
+  vertical-align: middle;  
+  background: linear-gradient(to bottom right,#2980B9, #1c5380);   
+}
+.login img{
+  vertical-align: middle;
+}
+.buttom-img{
+  padding-top: 3px;
+}
+
+
+.logo{
+  float: left;
+}
+.content-box{
+  width: 70%;
+  background-image: url(../images/frame.png);
+  background-size: 100% 100%;
+  padding: 2% 5%;
+  
+}
+h1{
+  color:#06365f;
+  width: 70%;
+  
+}
+footer{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  margin: 20px 0;
+  
+  
+
+}
+.footer-content{
+  margin: 0 auto;
+  text-align: center;
+  text-transform: uppercase;
+  
+}
+.footer-content a{
+  text-decoration: none;
+  color: #1c5380;
+  margin:5px;
+  
+}
+
+
+.clearfix{
+  clear: both;
 }
