--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,114 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image:  url(../images/bgtile.png);
+  background-repeat: repeat-x;
+}
+
+h2 {
+  width: 10.3em;
+  margin-top: 0;
+  color: #06365f;
+  font-size: 32px;
+  line-height: 1.2em;
+}
+
+header {
+  width: 100%;
+  height: 88px;
+  position: relative;
+}
+
+header > * {
+  display: inline;
+  position: relative;
+  vertical-align: middle;
+}
+
+
+footer {
+  position: absolute;
+  bottom: 24px;
+  width: 100%;
+  clear: both;
+  text-align: center;
+}
+
+ul {
+  text-align: center;
+}
+
+li {
+  display: inline-block;
+  margin: 0 16px;
+  list-style: none;
+  text-transform: uppercase;
+  font-size: 14px;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 500;
+  color: #1c5380;
+}
+
+.wrapper {
+  padding: 80px;
+}
+
+.float-left {
+  float: left;
+}
+
+.float-right {
+  float: right;
+}
+
+.column-4 {
+  width: 40%;
+}
+
+.column-8 {
+  width: 60%;
+  max-width: 632px;
+}
+
+.logo {
+
+}
+
+.btn-container {
+  height: 100%;;
+  float: right;
+}
+
+.btn {
+  display: inline-block;
+  margin-right: 10px;
+  padding: 6px 8px;
+  padding-top: 8px;
+  border-radius: 2px;
+  border: 1px solid #06365f;
+  color: #fff;
+  font-size: 12px;
+  letter-spacing: 0.7px;
+  background-image: url(../images/bgtile.png); 
+  background-size: 1px 100%;
+  background-repeat: repeat-x;
+}
+.btn * {
+  display: inline;
+  vertical-align: sub;
+}
+
+.btn img {
+  margin-right: 8px;
+}
+
+.main-content {
+  padding: 40px;
+  min-width: 400px;
+  background-image: url(../images/frame.png); 
+  background-repeat: no-repeat;
+  background-size: 100% auto;
 }
