--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,74 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: linear-gradient(#1c5380,#1c5380 40%,white 40%, white 100%); 
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  border: 1px solid black;
+  height: 800px;
 }
+
+h2 {
+  color: #06365f;
+  width: 250px;
+}
+
+.smartphone {
+  border: 1px solid black;
+}
+
+.container-logos-text {
+  border: 1px solid black; 
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+}
+
+.logos-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.instagram-logo {
+  border: 1px solid black;
+}
+
+.log-in-button {
+  border: 1px solid black; 
+  width: 105px;
+  height: 50px;
+  background-color: #06365f;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.login-in-button p {
+  color: white;
+  font-style: bold;
+}
+
+.text-container {
+  background-image: url("/Users/anthony/Desktop/Ironhack/lab-css-instagram-clone/starter-code/images/frame.png");
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.main-text {
+  padding: 25px;
+}
+
+.app-logos {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.app-logos img {
+  margin-left: 25px;
+}
+
