--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,89 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: linear-gradient(#1c5380,#1c5380 35%,#06365f 25%, white 35%, white 100%); 
+  /*background-image: url("../images/bgtile.png");*/
+  background-repeat: repeat-x;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 700px;
+  padding-top: 25px;
+}
+
+h2 {
+  color: #06365f;
+  width: 250px;
+}
+
+
+.container-logos-text { 
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+}
+
+.nav-bar {
+  width: 700px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav-bar h3 {
+  color:#1c5380;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.nav-bar .copyright {
+  color: grey;
+}
+
+.logos-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.log-in-button {
+  border: 2px solid #06365f; 
+  width: 75px;
+  height: 25px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  /*background-color: #06365f;*/
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 10px;
+}
+
+.log-in-text {
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+}
+
+.text-container {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 35px;
+}
+
+.main-text {
+  padding: 5px 25px 0px 25px;
+}
+
+.app-logos {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.app-logos img {
+  margin-left: 25px;
 }
