--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,69 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  width: 100%
+}
+
+.background {
+  background-color: #3d428b;
+  width: 100%;
+  height: 30vh;
+  position: absolute;
+  z-index: -100;
+}
+
+.content-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+
+}
+
+.insta-img {
+  margin-top: 8%;
+
+
+}
+.content {
+  margin: 8% 3% 0 3%;
+  width: 30%;
+}
+.content-text {
+  background-color: white;
+  border-color: white;
+  border-radius: 2%;
+  padding: 5%;
+  font-size: 0.9em;
+
+}
+
+.content-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.app-buttons {
+  padding: 0 5% 0 5%;
+}
+
+.content-header img {
+  width: 60%;
+  height: 60%
+}
+
+.footer {
+ display: flex;
+ flex-wrap: wrap;
+ list-style: none;
+ justify-content: center;
+}
+
+
+.footer li a {
+  padding: 0 10px;
+  font-size: 0.7em;
+  color: rgba(81, 81, 138, 0.781);
+  font-weight: 1000;
+  text-decoration: none;
+
 }
