--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,45 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #0e0e0e;
+  display: block;
+}
+
+.background-top {
+  background-image: url("images/bgtile.png");
+  background-repeat: repeat-y;
+}
+
+.phone {
+  
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  background-color: white;
+  margin: 50px;
+}
+
+.right-box {
+  justify-content: flex-end;
+}
+
+.logo {
+  justify-content: flex-end;
+}
+
+.text{
+  position: absolute;
+  padding: 50px;
+  color: black;
+  flex-shrink: 0;
+  overflow: auto;
+}
+
+.text-background{
+  display: flex;
+  align-items: center;
 }
