--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,76 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png") repeat-x;
+}
+
+.container {
+  position: relative;
+  top: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.left-container {
+  width: 350px;
+}
+
+.right-container {
+  width: 550px;
+}
+
+.brand-login {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+.brand-image {
+  width: 210px;
+  height: 52.16px;
+}
+
+.login-btn {
+  background: url("../images/bgtile.png") repeat-x;
+  width: 100px;
+  display: flex;
+  color: white;
+  justify-content: space-around;
+  align-items: center;
+  font-weight: bold;
+}
+
+.body-content {
+  background: url("../images/frame.png") no-repeat;
+  background-size: contain;
+  padding: 30px;
+}
+
+.body-content h1 {
+  color: darkslateblue;
+  font-size: 1.5em;
+}
+.footer {
+  position: relative;
+  top: 120px;
+  text-transform: uppercase;
+}
+
+.footer ul {
+  list-style: none;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+}
+
+.footer ul li {
+  margin: 0 10px;
+  color: darkblue;
+  font-weight: bolder;
+}
+
+.copy-right {
+  color: grey !important;
 }
