--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,39 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  }
+
+.login {
+  width: 100px;
+  height: 50px;
+  display: flex;
+  
 }
+
+
+
+.footerList {
+  list-style-type: none;
+  display: flex;
+  justify-content:space-around;
+  
+  }
+
+.bgrTile {
+  width: 100%;
+  height: 200px;
+  background-color: #06365f;
+  position: absolute;
+}
+
+.backgroundFrame {
+  background-image: url(images/frame.png);
+ 
+}
+
+.flexDiv {
+  display: flex;
+  display: inline-block;
+  border: 5px solid black;
+}
+
