--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,87 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+h1{
+  color: white;
+
+}
+
+p{
+  position: relative;
+  display: flex;
+  margin: auto;
+}
+
+.bkg-blue{
+  position: absolute;
+  background-image: linear-gradient(#1c5380, #06365f);
+  width: 100%;
+  height: 270px;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  margin: 30px auto;
+}
+
+#login-btm{
+  width: 90px;
+  height: 40px;
+  border-radius: 3px;
+  border: 1px solid transparent;
+  background-image: linear-gradient(#1c5380, #06365f);
+}
+
+#login-btm .img{
+  display: inline;  
+}
+
+
+.iphone{
+  display: flex;
+  align-items: center;  
+}
+
+#text{
+  position: relative;
+  width: 90%;
+  margin: 0 auto;
+  float: left;
+  align-content: space-around;
+}
+
+.rt-column{
+  float: left;
+}
+
+.bt-link{
+  display: flex;
+  float: bottom;
+}
+
+.lg-bt{
+  width: 500px;
+}
+
+#list-inline ul{
+  display: flex;
+  justify-content: space-around;
+  list-style-type: none;
+  width: 600px;
+  align-items: center;
+  margin: auto;
+}
+
+#list-inline div{
+  width: 500px;
+}
+
+footer{
+  width: 100%;
+  height: 90px;
+}
