--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,74 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
+.head {
+  display: flex;
+  flex-direction: row;
+}
+.body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+.h2 {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #06365f;
+  font-size: 30px;
+  font-weight: bold;
+}
+.title {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 5px;
+}
+.container-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+}
+.box {
+  border: 2px solid #eee;
+  border-radius: 20px;
+  box-sizing: border-box;
+  background-color: white;
+}
+.text {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  
+}
+.badges {
+  display: flex;
+  flex-direction: row;
+}
+.nav-bar {
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #06365f;
+  font-weight: bold;
+  width: 500px;
+}
+.nav-bar-li {
+  list-style-type: none;
+  text-align: center;
+  display: inline;
+}
+.nav-bar-item {
+  text-decoration: none;
+  color: #06365f;
+}
+.footer {
+  display: flex;
+  justify-content: flex-end;
+  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #1c5380;
+  font-weight: bold;
 }
