--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,24 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 4;
+}
+
+.header {
+  background-color: #1c5380;
+  width: absolute;
+  height: 100px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  margin: 2px;
+  font-size: 1em;
+}
+
+
+#logo {
+  display: flex;
+  justify-content center;
 }
