--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,77 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: URL("../images/bgtile.png"); 
+  background-repeat: repeat-x;
+}
+
+.flexbox {
+  display: flex;
+  justify-content: center;
+}
+
+.phone-image {
+  margin-top: 50px;
+  padding: 20px;
+}
+
+.content {
+  margin-top: 100px;
+  padding: 20px;
+}
+
+.log-in-button {
+  background:  #1c5380;
+  width: 90px;
+  height: 30px;
+  padding: 0 auto;
+  color: white;
+  font-weight: bold;
+  font-size: 0.9em;
+  border-radius: 5px;
+}
+
+.text-box {
+  background-image: URL("../images/frame.png");
+  width: 500px;
+}
+
+h1 {
+  color: #1c5380;
+  padding-top: 30px;
+  padding-left: 30px;
+  padding-right: 30px;
+  line-height: 1.3em;
+}
+
+p {
+  padding: 0 30px;
+  font-size: 0.9em;
+}
+
+.img-apple {
+  padding: 10px 30px;
+}
+.img-android {
+ padding: 10px 0;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
+li {
+  display: inline;
+  padding: 10px;
+  list-style-type: none;
+  color:#06365f;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 0.7em;
+}
+
+.instagram-copyright {
+  color: grey;
 }
