--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,61 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  flex-flow: column wrap;
+}
+
+.container {
+  display: flex;
+}
+
+.main {
+  height: 800px;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.right-box {
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 700px;
+}
+
+.text-box {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  flex-flow: column wrap;
+  padding-left: 50px;
+}
+
+.logo-login {
+  justify-content: space-between;
+  width: 500px;
+}
+
+h1 {
+  color: #06365f;
+}
+
+.main-text-p {
+  width: 400px;
+}
+
+
+
+.footer {
+  height: 60px;
+  justify-content: space-around;
+  margin: 0 100px;
+}
+
+.footer span{
+  color: #1c5380;
+  font-weight: bold;
+}
+
+span .copyright {
+  color:grey;
 }
