--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,109 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  --insta-blue: rgb(56,97,134);
+  --insta-light-blue: rgb(87,126,160);
+  box-sizing: border-box;
+}
+
+a{
+  text-decoration: none;
+  color: var(--insta-blue);
+  
+}
+
+button{
+  border: none;
+  height: 40px;
+  margin-right: 30px;
+}
+
+.head {
+  background-image: linear-gradient(to top right, var(--insta-blue), var(--insta-light-blue));
+  height: 40vh;
+  width: 100%;
+}
+
+.content{
+position: absolute;
+top:80px;
+}
+
+.left {
+  float:left;
+  margin-left: 10vw;
+  margin-right: 5vw;
+}
+.right {
+  display: inline-block;
+  width: 50%;
+}
+
+.instaLogo{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#login {
+  padding:5px;
+  background-image: linear-gradient(to top, var(--insta-blue), var(--insta-light-blue));
+  color: white;
+  font-weight: 600;
+  border: 1px solid var(--insta-blue);
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#home{
+  margin-right: 5px;
+}
+
+.text {
+  height: auto;
+  padding: 30px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.text > h2 {
+  display: inline-block;
+  width: 50%;
+  margin: 0;
+  color: rgb(24,63,99);
+}
+
+#download {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+footer{
+  position: absolute;
+  display: block;
+  width: 90%;
+  bottom:10px;
+  text-align: center;
+}
+
+.foot{
+  position: relative;
+  display: inline-block;
+  padding: 0;
+  margin: 20px;
+  width: 100%;
+  text-align: center;
+}
+
+.foot > ul {
+  padding: 0;
+  margin:0;
+}
+.foot > ul > li{
+  display: inline-block;
+  margin: 0 10px;
 }
